feat(java): string names, code enums, and dedicated failure types
Grammar names arrive as String with raw byte[] twins; codes are enums with fromCode plus UNKNOWN.
GalleyException carries a frozen deep-copied Diagnostic; missing artifacts and
use-after-close raise MissingArtifactException and GalleyClosedException.
BREAKING-CHANGE: grammar-name accessors return String (raw bytes via *Bytes twins);
parser/diagnostic/status codes are enums (ParserType, RecoveryMode, DiagnosticKind,
RecoveryTarget, ResumeSide, StatusCode); GalleyException.getCode() returns StatusCode;
Node.symbolNameString() removed; closed use raises GalleyClosedException; missing
artifacts raise checked MissingArtifactException, so Galley.load and dependents declare throws.